# deltacat

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  MANIFEST.in  Makefile  README-development.md  README.md  appspec.yml  benchmark-requirements.txt  deltacat-pdames.yaml  dev-requirements.txt  foo.py  foowds.py  glue_runner.py  pyproject.toml  pytest.ini  requirements.txt  s3-build-and-deploy.sh  setup.py  test_main_storage.py  test_repeat.sh  test_table_version.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  development.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  publish.yml
deltacat/: __init__.py  annotations.py  api.py  constants.py  env.py  exceptions.py  logs.py
deltacat/.github/: pull_request_template.md
deltacat/autoscaler/: node_group.py  utils.py
deltacat/autoscaler/events/: dispatcher.py  event_store.py  exceptions.py  processor.py  session_launcher.py  session_manager.py  states.py  workflow.py
deltacat/aws/: clients.py  constants.py  s3u.py
deltacat/aws/lakeformation/: lakeformation_table_reader.py  lakeformation_utils.py
deltacat/aws/redshift/: __init__.py
deltacat/benchmarking/: README.md  benchmark_engine.py  benchmark_parquet_reads.py  benchmark_report.py  benchmark_suite.py  conftest.py  test_benchmark_pipeline.py
deltacat/benchmarking/data/: random_row_generator.py  row_generator.py
deltacat/catalog/: __init__.py  catalog_properties.py  delegate.py  interface.py
deltacat/catalog/default_catalog_impl/: __init__.py
deltacat/catalog/iceberg/: __init__.py  iceberg_catalog_config.py  impl.py  overrides.py
deltacat/catalog/main/: __init__.py  impl.py
deltacat/catalog/model/: catalog.py  properties.py  table_definition.py
deltacat/catalog/v2/: catalog_impl.py  impl.py
deltacat/compute/: __init__.py  compact_driver.py  janitor.py
deltacat/compute/compactor/: README.md  __init__.py  compaction_session.py  repartition_session.py
deltacat/compute/compactor_v2/: compaction_session.py  constants.py
deltacat/compute/converter/: constants.py  converter_session.py  equality_delete_to_position_delete_session.py  overrides.py
deltacat/compute/equality_delete_to_position_delete_conveter/: converter.py  overrides.py
deltacat/compute/jobs/: client.py
deltacat/compute/merge_on_read/: __init__.py  daft.py
deltacat/compute/metastats/: meta_stats.py  stats.py
deltacat/compute/resource_estimation/: __init__.py  delta.py  manifest.py  model.py  parquet.py  utils.py
deltacat/compute/resource_requirements/: parquet.py  utils.py
deltacat/compute/stats/: basic.py  types.py
deltacat/daft/: daft_scan.py  model.py  translator.py
deltacat/dev/: __init__.py
deltacat/dev/data_access_layer/: README.md
deltacat/docs/schema/: README.md
deltacat/docs/table/: README.md
deltacat/examples/: basic.py  basic_logging.py  daft_integration_example.py  hello_world.py  logging.py  ray_basic.py  ray_data_processing.py  ray_perf_counter.py
deltacat/examples/common/: fixtures.py
deltacat/examples/compactor/: README.md  bootstrap.py  catalog_inspector.py  compactor.py  explorer.py  job_runner.py
deltacat/examples/iceberg/: iceberg_bucket_writer.py  iceberg_reader.py
deltacat/examples/indexer/: indexer.py  job_runner.py
deltacat/examples/rivulet/: parquet_to_feather.ipynb  parquet_to_feather.py  pytorch_demo.ipynb  shard_demo.ipynb  wds_demo.ipynb  wds_demo.py
deltacat/examples/storage/: ray_basic.py  ray_perf_counter.py
deltacat/experimental/beam/: README.md  managed.py
deltacat/experimental/compatibility/: backfill_locator_to_id_mappings.py  backfill_transaction_partitions.py
deltacat/experimental/converter_agent/: callbacks.py  table_monitor.py
deltacat/experimental/daft/: __init__.py  daft_catalog.py  deltacat_daft_patch.py
deltacat/expression/: __init__.py  expression.py  visitor.py
deltacat/io/: __init__.py  dataset.py  file_object_store.py  memcached_object_store.py  object_store.py  ray_plasma_object_store.py  read_api.py  redis_object_store.py  s3_object_store.py
deltacat/io/dataset/: deltacat_dataset.py
deltacat/io/datasink/: deltacat_datasink.py  s3_datasink.py
deltacat/io/datasource/: deltacat_datasource.py  s3_datasource.py
deltacat/io/pyarrow/: parquet_datasource.py
deltacat/io/reader/: deltacat_read_api.py
deltacat/scaling_test/: compacted_table_stats_validator.py  compactor_scaling_test.py  one_custom_resource.yaml  scaling_test_cloudwatch_config.json  scaling_test_example.yaml  scaling_test_node_group.py  scaling_test_yaml_generator.py
deltacat/storage/: README.md  __init__.py  interface.py  interface_v2.py
deltacat/storage/glue/: __init__.py  exceptions.py  schema.py
deltacat/storage/iceberg/: iceberg_scan_planner.py  impl.py  model.py
deltacat/storage/main/: impl.py  partrick_impl.py
deltacat/storage/model/: constants.py  decorators.py  delete_parameters.py  delta.py  delta_locator.py  delta_manifest.py  delta_staging_area.py  interop.py  list_result.py  locator.py  manifest.py  metafile.py  metafile_utils.py  namespace.py  namespace_locator.py  partition.py  partition_locator.py  partition_spec.py  partition_staging_area.py  push_down.py  scan_plan.py  scan_task.py  schema.py  shard.py  sort_key.py  stream.py  table.py  (+7 more)
deltacat/tests/: conftest.py  test_deltacat.py  test_deltacat_api.py  test_exceptions.py  test_exceptions_main.py  test_logs.py  test_repartition.py
deltacat/types/: media.py  partial_download.py  tables.py
deltacat/utils/: arguments.py  cloudpickle.py  common.py  config_loader.py  daft.py  deltacat_helper.py  export.py  filesystem.py  metafile_locator.py  metrics.py  numpy.py  pandas.py  performance.py  placement.py  polars.py  profiling.py  pyarrow.py  rangedictionary.py  reader_compatibility_mapping.py  resources.py  s3fs.py  schema.py  url.py
dev/iceberg-integration/: Dockerfile  docker-compose-integration.yml  provision.py
iceberg/: pom.xml
media/: customer_feedback_001.txt  customer_feedback_002.txt  customer_feedback_003.txt
scripts/: createwheel.sh
source/: conf.py  index.rst
tests/io/: test_read_iceberg.py
(+691 files in other folders)
