[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deltacat"
dynamic = ["version"]
description = "DeltaCAT is a portable Pythonic Data Lakehouse powered by Ray."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9,<3.11"
authors = [{ name = "Ray Team" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "aws-embedded-metrics==3.2.0",
    "boto3~=1.34",
    "google-cloud-storage",
    "gcsfs==2025.3.2",
    "daft==0.5.22",
    "intervaltree==3.1.0",
    "msgpack~=1.0.7",
    "numpy==1.23.2",
    "pandas==2.2.3",
    "polars==1.28.1",
    "pyarrow==16.0.0",
    "pydantic!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,<2.10.0",
    "pymemcache==4.0.0",
    "ray[default]==2.46.0",
    "tenacity==8.2.3",
    "typing-extensions>=4.6.1",
    "redis==5.0.0",
    "schedule==1.2.0",
]

[project.optional-dependencies]
iceberg = [
    "pyiceberg[glue]>=0.9.0",
    "pyiceberg[hive]>=0.9.0",
    "pyiceberg[sql-sqlite]>=0.9.0",
]
beam = ["apache-beam==2.65.0"]
s3fs = ["s3fs==2025.3.2"]
dev = [
    "apache-beam==2.65.0",
    "black==22.12.0",
    "faker==33.1.0",
    "faker-file>=0.5.0",
    "flake8==5.0.4",
    "ipywidgets==8.1.5",
    "isort==5.10.1",
    "memray==1.6.0; platform_system != 'Windows' and sys_platform != 'darwin' and platform_machine != 'arm64' and platform_machine != 'aarch64'",
    "moto==4.1.12",
    "Pillow==11.0.0",
    "pre-commit==2.20.0",
    "pyiceberg[glue]>=0.9.0",
    "pyiceberg[hive]>=0.9.0",
    "pyiceberg[sql-sqlite]>=0.9.0",
    "pyspark==3.5.3",
    "pytest==7.2.0",
    "pytest-benchmark==4.0.0",
    "pytest-cov==4.0.0",
    "pytest-mock==3.14.0",
    "requests-mock==1.11.0",
    "sphinx==7.2.6",
    "tabulate==0.9.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "transformers==4.48.0",
]

[project.urls]
Homepage = "https://github.com/ray-project/deltacat"

[tool.hatch.version]
path = "deltacat/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/deltacat"]

[tool.hatch.build.targets.wheel]
packages = ["deltacat"]
